# swc-plugin-pre-paths

./: Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  workflow_test.yml
src/: config.rs  injector.rs  lib.rs
tests/: fixture.rs
tests/fixture/baseUrl/: config.json  output.js
tests/fixture/wildcard/: config.json  input.js  output.js
tests/fixture/without_baseUrl/: config.json  input.js  output.js
