[package]
name = "swc-plugin-pre-paths"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]

pathdiff = "0.2"
path-absolutize = { version = "3", features = ["use_unix_paths_on_wasm"] }

serde = "1"
serde_json = "1"
swc_core = { version = "34", features = [
  "ecma_plugin_transform",
  "ecma_parser",
] }

ts-rs = "11"

[dev-dependencies]
testing = "15"
# .cargo/config defines few alias to build plugin.
# cargo build-wasip1 generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
